--- a/template-configs/atlantis.us-east-1.testflight.config
+++ b/template-configs/atlantis.us-east-1.testflight.config
@@ -46,4 +46,4 @@ LS_ELASTIC_CLUSTERNAME="elasticsearch-atlantis"
 LS_SINCEDB_DIR=""
 
 #Logstash download url
-LS_DL_URL="https://download.elastic.co/logstash/logstash/${LS_VERSION}.tar.gz"
+LS_DL_URL="https://download.elastic.co/logstash/logstash/logstash-${LS_VERSION}.tar.gz"
