--- a/config/templates/atlantis-supervisor-logstash.conf.template
+++ b/config/templates/atlantis-supervisor-logstash.conf.template
@@ -5,25 +5,23 @@
 input {
    file {
 	path => "/var/log/atlantis/supervisor/**"
-	start_position => beginning
 	type => "atlantis-supervisor"
    }
 
    #file {
 #	path => "/var/log/atlantis/containers/**/*"
-#	start_position => beginning
 #	type => "atlantis-container"
  #  }
 
  exec {
-	command => "bash /root/atlantis-analytics/logstash-atlantis-supervisor/scripts/exec/supervisor-disk-usage.sh"
-	interval => 60
+	command => "bash #LSREPOROOT#/scripts/exec/supervisor-disk-usage.sh"
+	interval => 180 
 	type => "atlantis-supervisor-exec-disk"
  }
 
 exec {
-	command => "bash /root/atlantis-analytics/logstash-atlantis-supervisor/scripts/exec/mem-usage.sh"
-	interval => 15
+	command => "bash #LSREPOROOT#/scripts/exec/mem-usage.sh"
+	interval => 120
 	type => "atlantis-supervisor-exec-mem"
 
 }
@@ -32,19 +30,24 @@ exec {
 }
 
 #TEMPLATE FIELDS
+
 filter {
         mutate {
-        add_field => { 'host-full-hostname' => 'INSTFULLHOST'  }
-        add_field => { 'host-inst-id' => 'INSTID' }
-        add_field => { 'host-inst-type' => 'INSTTYPE' }
-        add_field => { 'host-local-hostname' => 'INSTLOCALHST' }
-        add_field => { 'host-local-ipv4' => 'INSTLOCALIPV4' }
-        add_field => { 'host-mac-addr' => 'INSTMACADDR' }
-        add_field => { 'host-pub-hostname' => 'INSTPUBHOST' }
-        add_field => { 'host-pub-ipv4' => 'INSTPUBIP' }
-        add_field => { 'host-sec-groups' => 'INSTSECG' }
+        add_field => { 'host-full-hostname' => '#INSTFULLHOST#'  }
+        add_field => { 'host-inst-id' => '#INSTID#' }
+        add_field => { 'host-inst-type' => '#INSTTYPE#' }
+        add_field => { 'host-local-hostname' => '#INSTLOCALHST#' }
+        add_field => { 'host-local-ipv4' => '#INSTLOCALIPV4#' }
+        add_field => { 'host-mac-addr' => '#INSTMACADDR#' }
+        add_field => { 'host-pub-hostname' => '#INSTPUBHOST#' }
+        add_field => { 'host-pub-ipv4' => '#INSTPUBIP#' }
+        add_field => { 'host-sec-groups' => '#INSTSECG#' }
+	add_field => { 'es-hostname' => '#ESHOSTNAME#' }
+	add_field => { 'es-clustername' => '#ESCLUSTERNAME#' }
+	add_field => { 'es-index-prefix' => '#ESINDEXPREFIX#' } 
         }
 }
+
 
 filter {
 
@@ -251,55 +254,53 @@ output {
    if [type] == "atlantis-supervisor" {
 	if [cmdtype] == 'RPC' {
                 elasticsearch {
-                        index => 'supervisor-rpc-%{host}'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-			cluster => 'elasticsearch-atlantis'
+                        index => '%{es-index-prefix}supervisor-rpc'
+                        host => '%{es-hostname}'
+			cluster => '%{es-clustername}'
                 }
         } else if [cmdtype] == 'netsec' {
                 elasticsearch {
-                        index => 'supervisor-netsec-%{host}'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-			cluster => 'elasticsearch-atlantis'
-
+                        index => '%{es-index-prefix}supervisor-netsec'
+			host => '%{es-hostname}'
+                        cluster => '%{es-clustername}'
                 }
         } else if [cmdtype] and [cmdtype] != "" {
                 elasticsearch {
-                        index => 'supervisor-othercmd-%{host}'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-			cluster => 'elasticsearch-atlantis'
-
+                        index => '%{es-index-prefix}supervisor-othercmd'
+                        host => '%{es-hostname}'
+                        cluster => '%{es-clustername}'
                 }
         } else if !("_grokparsefailure" in [tags]) {
                 elasticsearch {
-                        index => 'supervisor-other-%{host}'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-			cluster => 'elasticsearch-atlantis'
+                        index => '%{es-index-prefix}supervisor-other'
+                        host => '%{es-hostname}'
+                        cluster => '%{es-clustername}'
                 }
         } else {
                # elasticsearch {
-               #         index => 'parse-failures-supervisor-%{host}'
-               #         host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-	       #	cluster => 'elasticsearch-atlantis'
+               #         index => '%{es-index-prefix}parse-failures-supervisor'
+               #         host => '%{es-hostname}'
+               #         cluster => '%{es-clustername}'
                # }
         }
    } else if [type] == "atlantis-container" {
 
                 elasticsearch {
-                        index => 'container-%{host}'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-                        cluster => 'elasticsearch-atlantis'
+                        index => '%{es-index-prefix}container'
+                        host => '%{es-hostname}'
+                        cluster => '%{es-clustername}'
                 }
     } else if [type] == "atlantis-supervisor-exec-disk" {
 		elasticsearch {
-                        index => 'supervisors-disk'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-                        cluster => 'elasticsearch-atlantis'
+                        index => '%{es-index-prefix}supervisor-disk'
+                        host => '%{es-hostname}'
+                        cluster => '%{es-clustername}'
                 }
     } else if [type] == "atlantis-supervisor-exec-mem" {
 		elasticsearch {
-                        index => 'supervisors-memory'
-                        host => 'ec2-54-83-111-222.compute-1.amazonaws.com'
-                        cluster => 'elasticsearch-atlantis'
+                        index => '%{es-index-prefix}supervisor-memory'
+                        host => '%{es-hostname}'
+                        cluster => '%{es-clustername}'
                 }
    }
 }
